--- a/aira/base/navbar.html
+++ b/aira/base/navbar.html
@@ -3,5 +3,5 @@
 
 
 {% block navbar_brand %}
-  <a href="/" class="navbar-brand" style="white-space: normal; min-height: 60px; width: 25em; font-size: 10pt; padding-top: 10px; padding-bottom: 10px; color: white">{% trans "PARTICIPATORY SYSTEM FOR IRRIGATION RECOMMENDATIONS (PLAIN OF POROS)" %}</a>
+  <a href="/" class="navbar-brand" style="white-space: normal; min-height: 60px; width: 25em; font-size: 10pt; padding-top: 10px; padding-bottom: 10px; color: black">{% trans "PARTICIPATORY SYSTEM FOR IRRIGATION RECOMMENDATIONS (PLAIN OF POROS)" %}</a>
 {% endblock %}
