--- a/aira/base/main.html
+++ b/aira/base/main.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block favicon %}
-  {{ block.super }}
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/poros-favicon.png' %}" />
 {% endblock %}
 
 
