--- a/aira/base/main.html
+++ b/aira/base/main.html
@@ -14,24 +14,26 @@
     <hr>
     <div class="row">
       <div class="col-sm-4 text-center">
-        <img height="150" width="150" src="{% static 'img/region-of-epirus-logo.png' %}">
+        <a href="https://php.gov.gr/"><img height="150" width="150" src="{% static 'img/region-of-epirus-logo.png' %}"></a>
         <p></p>
-        <p style="font-variant-caps: small-caps; font-size: large"><big>{% trans "Region of Epirus" %}</big></p>
+        <p style="font-variant-caps: small-caps; font-size: large"><a style="color: inherit" href="https://php.gov.gr/"><big>{% trans "Region of Epirus" %}</big></a></p>
       </div>
       <div class="col-md-4">
-          <p>{% trans "This web application aims to support the application of good agricultural practices regarding irrigation water use and has been developed using as base the open software which is freely available as a deliverable of the project ETCP GR-IT 2007-2013 IRMA, and uses meteorological data freely available through openmeteo.org." %}</p>
+        <p>{% trans "This web application aims to support the application of good agricultural practices regarding irrigation water use and has been based on open/free software. It uses meteorological data freely available through openmeteo.org." %}</p>
       </div>
       <div class="col-md-4">
-        <div style="text-align: center">
-        <span  style="font-size: 10pt;" class="text-success">&nbsp;</span> <br>
-        <a href="mailto:info.gap.ngo@gmail.com"><i class="fa fa-envelope fa-1x"></i></a>
-        </div>
+        {% blocktrans %}
+          <p>Local Organization for Land Reclamation (ΤΟΕΒ) of Poros</p>
+          <p>Diastavrosi Vasilikis-Drosochoriou<br>45500 Drosochori<br>Ioannina</p>
+        {% endblocktrans %}
+        <p><span class="fas fa-phone"></span> <span class="fas fa-fax"></span> +30-2651058267</p>
+        <p><span class="fas fa-envelope"></span> <a style="color: inherit" href="mailto:toebporou@yahoo.gr">toebporou@yahoo.gr</a></p>
       </div>
     </div>
     <hr>
     <div class="row">
       <div class="col-sm-4">
-        <p class="text-muted">Copyright © 2020–2021 IRMA_SYS</p>
+        <p class="text-muted">Copyright © 2020–2021 <a href="mailto:info.gap.ngo@gmail.com">IRMA_SYS</a></p>
       </div>
       <div class="col-sm-4 text-center">
         {% include "aira/base/language_switcher.html" %}
