Use the upside-down wifi as favicon

--- a/aira/base/main.html
+++ b/aira/base/main.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 {% block favicon %}
-  <link rel="shortcut icon" type="image/png" href="{% static 'img/poros-favicon.png' %}" />
+  <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon-irmasys.png' %}" />
 {% endblock %}
 
 
