Use new flatpages scheme

--- a/aira/base/main.html
+++ b/aira/base/main.html
@@ -40,7 +40,7 @@
       </div>
       <div class="col-sm-4 text-right">
         <p>
-          <a href="{% url 'terms' %}">{% trans "Terms of use" %}</a>
+          <a href="/pages/terms-of-use/">{% trans "Terms of use" %}</a>
         </p>
       </div>
     </div>
