Link to POSEIDON forecast instead of agromonitoring

--- a/aira/base/main.html
+++ b/aira/base/main.html
@@ -19,7 +19,7 @@
         <p style="font-variant-caps: small-caps; font-size: large"><a style="color: inherit" href="https://php.gov.gr/"><big>{% trans "Region of Epirus" %}</big></a></p>
       </div>
       <div class="col-md-4">
-        <p>{% trans "This web application aims to support the application of good agricultural practices regarding irrigation water use and has been based on open/free software. It uses meteorological data freely available through openmeteo.org." %}</p>
+        <p>{% trans "This web application aims to support the application of good agricultural practices regarding irrigation water use and has been based on open/free software. It uses meteorological data freely available through openmeteo.org and forecasts from openweathermap.org / agromonitoring.com." %}</p>
       </div>
       <div class="col-md-4">
         {% blocktrans %}
