Updated to use aira's renamed content block
In aira:223aaaa8a the "main_page" block had been renamed to "content",
so we now change it here as well.

--- a/aira/frontpage/main.html
+++ b/aira/frontpage/main.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 
 
-{% block main_page %}
+{% block content %}
   {% include "aira/frontpage/carousel.html" %}
   {{ block.super }}
 {% endblock %}
